@@ -1,8 +1,8 @@
 milter: $(SAPI_MILTER_PATH)
 
-$(SAPI_MILTER_PATH): $(PHP_GLOBAL_OBJS) $(PHP_BINARY_OBJS) $(PHP_SAPI_OBJS)
+$(SAPI_MILTER_PATH): $(PHP_GLOBAL_OBJS) $(PHP_BINARY_OBJS) $(PHP_MILTER_OBJS)
 	$(BUILD_MILTER)
 
 install-milter: $(SAPI_MILTER_PATH)
-	@$(INSTALL) -m 0755 $(SAPI_MILTER_PATH) $(bindir)/php-milter
+	@$(INSTALL) -m 0755 $(SAPI_MILTER_PATH) $(INSTALL_ROOT)$(bindir)/php-milter
 
